--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -53,38 +53,73 @@
 
 * 开发一个类并编写一个使用它的程序步骤：
 
-* 1、将接口（类定义）放在头文件中；
+  * 1、将接口（类定义）放在头文件中；
 
-  * 示例：
+  * 2、将实现（类方法的代码）放在源代码文件中。
 
-    * ```c++
-      #pragma once
-      // ch10_01_stock00.h -- Stock class interface
-      //version 00
-      #ifndef CH10_O1_STOCK00_H_
-      #define CH10_O1_STOCK00_H_
-      
-      #include <string>
-      
-      class Stock
-      {
-      private:
-      	std::string company;
-      	long shares;
-      	double share_val;
-      	double total_val;
-      	void set_tot() { total_val = shares * shares_val; }
-      public:
-      	void acquire(const std::string& co, long n, double pr);
-      	void buy(long num, double price);
-      	void sell(long num, double price);
-      	void update(double price);
-      	void show();
-      };
-      
-      #endif
-      ```
+    * 示例（针对1、将接口（类定义）放在头文件中）：
 
-  * 
+      * ```c++
+        #pragma once
+        // ch10_01_stock00.h -- Stock class interface
+        //version 00
+        #ifndef CH10_O1_STOCK00_H_
+        #define CH10_O1_STOCK00_H_
+        
+        #include <string>
+        
+        class Stock
+        {
+        private:
+        	std::string company;
+        	long shares;
+        	double share_val;
+        	double total_val;
+        	void set_tot() { total_val = shares * shares_val; }
+        public:
+        	void acquire(const std::string& co, long n, double pr);
+        	void buy(long num, double price);
+        	void sell(long num, double price);
+        	void update(double price);
+        	void show();
+        };
+        
+        #endif
+        ```
 
-* 2、将实现（类方法的代码）放在源代码文件中。
+      * class 指出这些代码定义了一个类设计（不同于在模板参数中，在这里，关键字 class 和 typename 不是同义词，不能使用 typename 代替 class）
+
+      * Stock 是这个新类的类型名，该声明让我们能够声明 Stock 类型的变量——称为对象或实例。
+
+      * 这么看类和对象的关系为一对多，一个类对应多个对象，每个对象都具有该类的所有特性。
+
+    * 将数据和方法组合成一个单元是类最吸引人的特性。有了这种设计，创建 Stock 对象时，将自动指定使用对象的规则。
+
+    * a. 访问控制
+
+      * 关键字 private 和 public 也是新的，它们描述了对类成员的访问控制。
+        * 使用类对象的程序都可以直接访问公有部分，但只能通过公有成员函数来访问对象的私有成员。
+        * 因此，公有成员函数时程序和对象的私有成员之间的桥梁，提供了对象和程序之间的接口。防止程序直接访问数据被称为数据隐藏。
+        * ![image-20231114111748928](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231114111748928.png)
+        * 类设计尽可能将公有接口与实现细节分开。
+          * 公有接口表示设计的抽象组件。
+          * 将实现细节放在一起并将它们与抽象分开被称为封装。
+          * 数据隐藏(将数据放在类的私有部分中)是一种封装，将实现的细节隐藏在私有部分中，就像 Stock 类对 set_tot( )所做的那样，也是一种封装。封装的另一个例子是，将类函数定义和类声明放在不同的文件中。
+            * 数据隐藏不仅可以防止直接访问数据，还让开发者(类的用户)无需了解数据是如何被表示的。
+            * 所需要知道的只是各种成员函数的功能;也就是说，需要知道成员函数接受什么样的参数以及返回什么类型的值。
+            * 原则是将实现细节从接口设计中分离出来。如果以后找到了更好的、实现数据表示或成员函数细节的方法，可以对这些细节进行修改，而无需修改程序接口，这使程序维护起来更容易。
+
+    * b. 控制对成员的访问：公有还是私有
+
+      * 无论类成员是数据成员还是成员函数，都可以在类的公有部分或私有部分中声明它。
+      * 但由于隐藏数据是OOP主要目标之一，因此**数据项通常放在私有部分，组成类接口的成员函数放在公有部分**
+      * 也可以把成员函数放在私有部分中，通常使用私有成员函数来处理不属于公有接口的实现细节。
+      * 不必使用 private 因为默认，但是显式可以更好强调数据隐藏概念。
+
+    * c. 类和结构
+
+      * 唯一区别：
+        * 结构的默认访问类型是 public；
+        * 而类的默认访问类型是 private。
+
+#### 10.2.3 实现类成员函数
