--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -100,7 +100,7 @@
       * 关键字 private 和 public 也是新的，它们描述了对类成员的访问控制。
         * 使用类对象的程序都可以直接访问公有部分，但只能通过公有成员函数来访问对象的私有成员。
         * 因此，公有成员函数时程序和对象的私有成员之间的桥梁，提供了对象和程序之间的接口。防止程序直接访问数据被称为数据隐藏。
-        * ![image-20231114111748928](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231114111748928.png)
+        * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/c215c866-0d5a-4255-a82f-d20b7bc7a8cd)
         * 类设计尽可能将公有接口与实现细节分开。
           * 公有接口表示设计的抽象组件。
           * 将实现细节放在一起并将它们与抽象分开被称为封装。
