--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -100,7 +100,7 @@
       * 关键字 private 和 public 也是新的，它们描述了对类成员的访问控制。
         * 使用类对象的程序都可以直接访问公有部分，但只能通过公有成员函数来访问对象的私有成员。
         * 因此，公有成员函数时程序和对象的私有成员之间的桥梁，提供了对象和程序之间的接口。防止程序直接访问数据被称为数据隐藏。
-        * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/c215c866-0d5a-4255-a82f-d20b7bc7a8cd)
+        * ![image-20231114111748928](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231114111748928.png)
         * 类设计尽可能将公有接口与实现细节分开。
           * 公有接口表示设计的抽象组件。
           * 将实现细节放在一起并将它们与抽象分开被称为封装。
@@ -120,6 +120,64 @@
 
       * 唯一区别：
         * 结构的默认访问类型是 public；
+        * 而类的默认访问类型是 private。
+
+#### 10.2.3 实现类成员函数
+
+* 这是上一节提到的第2步骤，创建类描述的第二部分：
+
+  * 为那些由类声明中的原型表示的成员函数提供代码。
+
+* 成员函数定义的两个特殊特征：
+
+  * 1、定义成员函数时，使用作用域解析运算符(::)来标识函数所属的类；
+
+    * 成员函数的**函数头**使用作用域运算符解析 (::)来指出函数所属的类：
+
+      * ```c++
+        void Stock::update(double price);
+        ```
+
+      * 这种表示法意味着我们定义的 update() 函数是 Stock 类的成员。作用域解析运算符确定了方法定义对应的类的身份。
+
+      * 类方法的完整名称中包括类名。我们说：
+
+        * Stock::update() 是函数的限定名 (qualified name)；
+        * 而简单的 update() 是全名的缩写(非限定名，unqualified name)，它只能在类作用域中使用。
+
+  * 2、类方法可以访问类的 private 组件。
+
+    * 方法可以访问类的私有成员，也就是说成员函数的定义中可以直接使用私有数据，但非成员函数就不能这样访问和使用。
+
+* 示例：
+
+  * ```c++
+    // ch10_02_stock00.cpp -- implementing the Stock class
+    //version 00
+    #include <iostream>
+    #include "ch10_01_stock00.h"
+    
+    void Stock::acquire(const std::string& co, long n, double pr)
+    {
+    	company = co;
+    	if (n < 0)
+    	{
+    		std::cout << "Number of shares can't be negative; "
+    			<< company << " shares set to 0.\n";
+    		shares = 0;
+    	}
+    	else
+    		shares = n;
+    	share_val = pr;
+    	set_tot();
+    }
+    ```
+
+  * 
+
+
+
+
         * 而类的默认访问类型是 private。
 
 #### 10.2.3 实现类成员函数
