--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -171,7 +171,111 @@
     	share_val = pr;
     	set_tot();
     }
+    
+    void Stock::buy(long num, double price)
+    {
+    	if (num < 0)
+    	{
+    		std::cout << "Number of shares purchased can't be negative. "
+    				<< "Transaction is aborted.\n";
+    	}
+    	else
+    	{
+    		shares += num;
+    		share_val = price;
+    		set_tot();
+    	}
+    }
+    
+    void Stock::sell(long num, double price)
+    {
+    	using std::cout;
+    	if (num < 0)
+    	{
+    		cout << "Number of shares sold can't be negative. "
+    			<< "Transaction is aborted.\n";
+    	}
+    	else if (num > shares)
+    	{
+    		cout << "You can't sell more than you have! "
+    			<< "Transaction is aborted.\n";
+    	}
+    	else
+    	{
+    		shares -= num;
+    		share_val = price;
+    		set_tot();
+    	}
+    }
+    
+    void Stock::update(double price)
+    {
+    	share_val = price;
+    	set_tot();
+    }
+    
+    void Stock::show()
+    {
+    	std::cout << "Company: " << company
+    		<< " Shares: " << shares << '\n'
+    		<< " Share Price: $" << share_val
+    		<< " Total Worth: $" << total_val << '\n';
+    }
     ```
 
-  * 20231115
+  * 1、成员函数说明
+
+    * 详情见P347；
+    * 这里需要注意一点：4个成员函数都使用了 set_tot() 函数，设置或重新设置了 total_val 的成员值。由于 set tot() 只是实现代码的一种方式，而不是公有接口的组成部分，因此这个类将其声明为私有成员函数(即编写这个类的人可以使用它，但编写代码来使用这个类的人不能使用)。
+    * 这种方法的主要价值在于，通过使用函数调用，而不是每次重新输入计算代码，可以确保执行的计算完全相同。另外，如果必须修订计算代码(在这个例子中，这种可能性不大)，则只需在一个地方进行修改即可。
+
+  * 2、内联方法
+
+    * 其**定义**（有函数具体操作代码）位于类声明中的函数都将自动称为内联函数，因此 Stock::set_tot() 是一个内联函数。类声明常将短小的成员函数作为内联函数。
+
+    * 如果愿意，也可以在类声明之外定义成员函数，并使其成为内联函数：只需在类实现部分中定义函数时使用 inline 限定符：
+
+      * ```c++
+        class Stock
+        {
+        private:
+        	...
+             void set_tot();
+        public:
+        	...
+        };
+        
+        inline void Stock::set_tot()
+        {
+            total_val = shares * share_val;
+        }
+        ```
+
+      * 内联函数的特殊规则要求在每个使用它们的文件中都对其进行定义。
+
+      * 确保内联定义对多文件程序中的所有文件都可用的、最简便的方法是:将内联定义放在定义类的头文件中。
+
+  * 3、方法使用哪个对象
+
+    * 如何将方法应用于对象：
+
+      * ```C++
+        Stock kate, joe;	// 创建Stock类对象
+        kate.show();		// 使用对象的成员函数
+        joe.show();
+        ```
+
+      * 所创建的每个新对象都有自己的存储空间，用于存储其内部变量和类成员；
+
+      * 但同一个类的所有对象共享同一组类方法，即每种方法只有一个副本。
+
+        * kate.shares 和 joe.shares 将各占一个内存块
+        * 但 kate.show() 和 joe.show() 都调用同一个方法
+        * 它们将执行同一个代码块，只是将这些代码用于不同的数据。
+        * ![image-20231116104556748](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231116104556748.png)
+
+#### 10.2.4 使用类
+
+
+
 
