--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -272,7 +272,8 @@
         * kate.shares 和 joe.shares 将各占一个内存块
         * 但 kate.show() 和 joe.show() 都调用同一个方法
         * 它们将执行同一个代码块，只是将这些代码用于不同的数据。
-        * ![image-20231116104556748](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231116104556748.png)
+        * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/90492663-11dc-487f-b7cc-cf4371488850)
+
 
 #### 10.2.4 使用类
 
