--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -277,6 +277,55 @@
 
 #### 10.2.4 使用类
 
+* 要创建类对象，可以声明类变量，也可以使用 new 为类对象分配存储空间。可以将对象作为函数的参数和返回值，也可以将一个对象赋给另一个。
 
+* 示例：
 
+  * ```c++
+    // ch10_03_usestock0.cpp -- the client program
+    // compile with stock00.cpp
+    #include <iostream>
+    #include "ch10_01_stock00.h"
+    
+    int main()
+    {
+    	Stock fluffy_the_cat;
+    	fluffy_the_cat.acquire("NanoSmart", 20, 12.50);
+    	fluffy_the_cat.show();
+    	fluffy_the_cat.buy(15, 18.125);
+    	fluffy_the_cat.show();
+    	fluffy_the_cat.sell(400, 20.00);
+    	fluffy_the_cat.show();
+    	fluffy_the_cat.buy(300000, 40.125);
+    	fluffy_the_cat.show();
+    	fluffy_the_cat.sell(300000, 0.125);
+    	fluffy_the_cat.show();
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Company: NanoSmart Shares: 20
+     Share Price: $12.5 Total Worth: $250
+    Company: NanoSmart Shares: 35
+     Share Price: $18.125 Total Worth: $634.375
+    You can't sell more than you have! Transaction is aborted.
+    Company: NanoSmart Shares: 35
+     Share Price: $18.125 Total Worth: $634.375
+    Company: NanoSmart Shares: 300035
+     Share Price: $40.125 Total Worth: $1.20389e+07
+    Company: NanoSmart Shares: 35
+     Share Price: $0.125 Total Worth: $4.375
+    ```
+
+* 📌客户/服务器模型
+
+  * OOP 程序员常依照客户/服务器模型来讨论程序设计。
+  * 在这个概念中，客户是使用类的程序。类声明(包括类方法)构成了服务器，它是程序可以使用的资源。客户只能通过以公有方式定义的接口使用服务器这意味着客户(客户程序员)唯一的责任是了解该接口。
+  * 服务器 (服务器设计人员) 的责任是确保服务器根据该接口可靠并准确地执行。服务器设计人员只能修改类设计的实现细节，而不能修改接口。这样程序员独立地对客户和服务器进行改进，对服务器的修改不会客户的行为造成意外的影响。
+
+#### 10.2.5 修改实现
 
