--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -329,3 +329,31 @@
 
 #### 10.2.5 修改实现
 
+* 1、可以对数字格式不一致等问题进行改进实现，但保持接口不变。
+
+  * ostream 类包含了一些可用于控制格式的成员函数，可在方法 show() 中使用这些工具来控制格式。
+
+    * ```c++
+      void Stock::show()
+      {
+          using std::cout;
+          using std::ios_base;
+          // set format to #.###
+          ios_base::fmtflags orig =
+              cout.setf(ios_base::fixed, ios_base::floatfield);
+          std::streamsize prec = cout.precision(3);
+          
+          cout << "Company: " << company
+              << " Shares: " << shares << "\n";
+          cout << " Share Price: $" << share_val;
+          // set format to #.##
+          cout.precision(2);
+          cout << " Total Worth: $" << total_val << "\n";
+          
+          // restore original format
+          cout.setf(orig, ios_base::floatfield);
+          cout.precision(prec);
+      }
+      ```
+
+#### 10.2.6 小结
