--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -357,3 +357,44 @@
       ```
 
 #### 10.2.6 小结
+
+* 指定类设计的第一步是提供类声明。
+
+  * 类声明类似结构声明，可以包括数据成员和函数成员。
+
+    * 声明有私有部分，在其中声明的成员只能通过成员函数进行访问;
+    * 声明还具有公有部分，在其中声明的成员可被使用类对象的程序直接访问。
+
+  * 通常，数据成员被放在私有部分中，成员函数被放在公有部分中：
+
+    * ```c++
+      class className
+      {
+      private:
+          data member declarations
+      public:
+          member function prototypes
+      };
+      ```
+
+    * 公有部分的内容构成了设计的抽象部分一一公有接口。
+
+    * 将数据封装到私有部分中可以保护数据的完整性，这被称为数据隐藏。
+
+    * 因此，C++通过类使得实现抽象、数据隐藏和封装等OOP 特性很容易。
+
+* 指定类设计的第二步是实现类成员函数。
+
+  * 可以在类声明中提供完整的函数定义，而不是函数原型。
+  * 但通常的做法是单独提供函数定义(除非函数很小)。
+    * 在这种情况下，需要使用作用域解析运算符来指出成员函数属于哪个类。
+    * 另一种描述这种情况的方式是，名称的作用域为整个类，因此在类声明和类方法之外使用该名称时，需要使用作用域解析运算符进行限定。
+
+* 要创建对象（类的实例），只需要将类名视为类型名即可。
+
+* 类成员函数（方法）可用过类对象来调用，需要使用成员运算符句点“.”。
+
+
+
+### 10.3 类的构造函数和析构函数
+
