--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -398,3 +398,12 @@
 
 ### 10.3 类的构造函数和析构函数
 
+* 对于创建完一个类来说，还需要其他操作：
+  * 应为类提供被称为 构造函数 和 析构函数 的标准函数。
+  * 因为目前内容还没解决常规**初始化**（设置对象中的各个成员信息）语法在类对象上面的适用：
+    * 数据部分的访问状态是私有的，这意味着程序不能直接访问数据成员。
+    * 因此需要设计合适的成员函数，才能成功地将对象初始化。
+* 类构造函数：
+  * 专门用于构造新对象、将值赋给它们的数据成员；
+
+#### 10.3.1 声明和定义构造函数
