--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -407,4 +407,80 @@
   * 专门用于构造新对象、将值赋给它们的数据成员；
 
 #### 10.3.1 声明和定义构造函数
-20231116
+
+* 创建 Stock 的构造函数：
+
+  * 设置 company 成员，将其他值设置为0：
+
+    * ```c++
+      // constructor prototype with some default arguments
+      Stock(const string & co, long n = 0, double pr = 0.0);
+      ```
+
+    * 注意：没有返回类型。原型位于类声明的公有部分。
+
+* 构造函数的一种可能定义：
+
+  * ```c++
+    // constructor definition
+    Stock::Stock(const string & co, long n, double pr)
+    {
+        company = co;
+        if (n < 0)
+        {
+            std::cout << "Number of shares can't be negative; "
+                << company << " shares set to 0.\n";
+            shares = 0;
+        }
+        else
+            shares = n;
+        share_val = pr;
+        set_tot();
+    }
+    ```
+
+  * 上述代码和本章前面的函数 acquire() 相同。区别在于，程序声明对象时，将自动调用构造函数
+
+* ❗注意：不能将类成员的名称用作构造函数的参数名。
+
+  * ```c++
+    // NO!
+    Stock::Stock(const string & company, long shares, double share_val)
+    {
+        ...
+    }
+    ```
+
+  * 
+
+  * 构造函数的参数表示的不是类成员，而是赋给类成员的值。
+
+  * 因此，参数名不能与类成员相同。
+
+  * 常见的解决办法：
+
+    * 1、在成员名中使用m_前缀：
+
+      * ```c++
+        class Stock
+        {
+        private:
+            string m_company;
+            long m_shares;
+            ...
+        }
+        ```
+
+    * 2、在成员名中使用后缀：
+
+      * ```c++
+        class Stock
+        {
+        private:
+            string company_;
+            long shares_;
+            ...
+        }
+        ```
+
+#### 10.3.2 使用构造函数
