--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -484,3 +484,40 @@
         ```
 
 #### 10.3.2 使用构造函数
+
+* C++提供2种使用构造函数来初始化对象的方式：
+
+  * 1、显式地调用构造函数：
+
+    * ```c++
+      Stock food = Stock("World Cabbage", 250, 1.25);
+      ```
+
+  * 2、隐式地调用构造函数：
+
+    * ```c++
+      Stock garment("Furry Mason", 50, 2.5);
+      ```
+
+    * 等价于：
+
+      * ```c++
+        Stock garment = Stock("Furry Mason", 50, 2.5);
+        ```
+
+* 每次创建类对象（甚至使用 new 动态分配内存）时，C++都是用类构造函数。
+
+* 将构造函数与 new 一起使用的方法：
+
+  * ```c++
+    Stock *pstock = new Stock("Electroshock Games", 18, 19.0);
+    ```
+
+  * 这条语句创建一个 Stock 对象，将其初始化为参数提供的值，并将该对象的地址赋给 pstock 指针。在这种情况下，对象没有**名称**（不是名称空间，就是普通名字的意思），但可以使用指针来管理该对象。
+
+* 📌构造函数被用来创建对象，而不能通过对象来调用：
+
+  * 因为在构造函数构造出对象之前，对象时不存在的。
+
+#### 10.3.3 默认构造函数
+
