--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -521,3 +521,72 @@
 
 #### 10.3.3 默认构造函数
 
+* 默认构造函数是在未提供显式初始值时，用来创建对象的构造函数。
+
+  * 也就是说，它是用于下面这种声明的构造函数：
+
+    * ```c++
+      Stock fluffy_the_cat;
+      ```
+
+    * 这条语句管用的原因在于：如果没有提供任何构造函数，则C++将自动提供默认构造函数。它是默认构造函数的隐式版本，不做任何工作。
+
+      * ```c++
+        Stock::Stock() {}
+        ```
+
+* 默认构造函数没有参数，因为声明中不包含值。
+
+* ❗注意：当且仅当没有定义任何构造函数时，编译器才会提供默认构造函数。
+
+  * 为类定义了构造函数后，程序员就必须为它提供默认构造函数。
+
+    * 如果提供了非默认构造函数，但没有提供默认构造函数：
+
+      * ```c++
+        Stock(const char * co, int n, double pr);
+        ```
+
+      * 则Stock stock1；声明将会出错。原因见P354。
+
+* 两种定义默认构造函数的方式：
+
+  * 1、给已有的构造函数所有参数提供默认值：
+
+    * ```c++
+      Stock(const char * co = "Error", int n = 0, double pr = 0.0);
+      ```
+
+  * 2、通过函数重载来定义另一个构造函数——一个没有参数的构造函数：
+
+    * ```c++
+      Stock();
+      ```
+
+  * 由于只能有一个默认构造函数，因此两种方式不能同时存在。
+
+  * 在类设计时，通常应提供对所有类成员做隐士初始化的默认构造函数：
+
+    * ```c++
+      Stock::Stock()
+      {
+          company = "no name";
+          shares = 0;
+          share_val = 0.0;
+          total_val = 0.0;
+      }
+      ```
+
+    * 使用上述任何一种方式(没有参数或所有参数都有默认值)创建了默认构造函数后，便可以声明对象变量，而不对它们进行显式初始化。
+
+      * 不要被非默认的构造函数的隐式形式误导：
+
+        * ```c++
+          Stock first("Concrete Conglomerate");//第一个声明调用非默认构造函数，即接受参数的构造函数
+          Stock second();//第二个声明指出，second()是一个返回 Stock 对象的函数
+          Stock third;//隐式地调用默认构造函数时，不要使用圆括号。
+          ```
+
+        * 隐式地调用默认构造函数时，不要使用圆括号！
+
+#### 10.3.4 析构函数
