--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -590,3 +590,34 @@
         * 隐式地调用默认构造函数时，不要使用圆括号！
 
 #### 10.3.4 析构函数
+
+* 1、析构函数：用构造函数创建对象后，程序负责跟踪该对象，直到其过期为止。对象过期时，程序将自动调用一个特殊的成员函数——析构函数。来完成清理过程。
+
+* 2、为 Stock 类提供一个析构函数
+
+  * 析构函数名称是在类名前加上~，并且析构函数可以没有返回值和声明类型，但是必须是没有参数的函数原型：
+
+    * ```c++
+      ~Stock();
+      ```
+
+  * 如果析构函数不承担任何重要的工作，则将它编写为不执行任何操作的函数：
+
+    * ```c++
+      Stock::~Stock()
+      {
+          cout << "Bye, " << company << "!\n";
+      }
+      ```
+
+* 3、何时调用析构函数：
+
+  * 由编译器决定，通常不应在代码中显式地调用析构函数。
+  * 如果创建的是静态存储类对象，则其析构函数将在程序结束时自动被调用；
+  * 如果创建的是动态存储类对象，则其析构函数将在程序执行完代码块时自动被调用。
+  * 如果对象是通过 new 创建的，则它将驻留在栈内存或自用存储区中，当使用 delete 来释放内存时，其析构函数将自动被调用。
+  * 程序可以创建临时对象来完成特定的操作，这是，程序将在结束对该对象时自动调用其析构函数。
+
+* 4、如果程序员没有提供析构函数：编译器将隐式地声明一个默认析构函数，并在发现导致对象被删除地代码后，提供默认析构函数的定义。
+
+#### 10.3.5 改进 Stock 类
