--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -621,3 +621,260 @@
 * 4、如果程序员没有提供析构函数：编译器将隐式地声明一个默认析构函数，并在发现导致对象被删除地代码后，提供默认析构函数的定义。
 
 #### 10.3.5 改进 Stock 类
+
+* 三个文件：类声明的头文件、类方法定义的实现文件、使用类的客户文件：
+
+* 1、头文件：它将构造函数和析构函数的原型加入到原来的类声明中。并且删除 acquire()函数，因为有析构函数所以不再需要。
+
+  * ```c++
+    #pragma once
+    #pragma once
+    // ch10_04_stock10.h -- Stock class declaration with constructors, destructor added
+    
+    #ifndef CH10_O4_STOCK10_H_
+    #define CH10_O4_STOCK10_H_
+    
+    #include <string>
+    
+    class Stock
+    {
+    private:
+    	std::string company;
+    	long shares;
+    	double share_val;
+    	double total_val;
+    	void set_tot() { total_val = shares * share_val; }
+    public:
+    // two constructors
+    	Stock();		// default constructor
+    	Stock(const std::string& co, long n = 0, double pr = 0.0);
+    	~Stock();		// noisy destructor
+    	void buy(long num, double price);
+    	void sell(long num, double price);
+    	void update(double price);
+    	void show();
+    };
+    
+    #endif
+    ```
+
+* 2、实现文件：包含头文件，以提供类声明（将文件名放在双引号而不是方括号中意味着编译器将源文件所在的目录中搜索它）。
+
+  * ```c++
+    // ch10_05_stock10.cpp -- Stock class with constructors, destructor added
+    #include <iostream>
+    #include "ch10_04_stock10.h"
+    
+    // constructors (verbose versions)
+    Stock::Stock()
+    {
+    	std::cout << "Default constructor called\n";
+    	company = "no name";
+    	shares = 0;
+    	share_val = 0.0;
+    	total_val = 0.0;
+    }
+    
+    Stock::Stock(const std::string& co, long n, double pr)
+    {
+    	std::cout << "Constructor using " << co << " called\n";
+    	company = co;
+    
+    	if (n < 0)
+    	{
+    		std::cout << "Number of shares can't be negative; "
+    			<< company << " shares set to 0.\n";
+    		shares = 0;
+    	}
+    	else
+    		shares = n;
+    	share_val = pr;
+    	set_tot();
+    }
+    
+    // class destructor
+    Stock::~Stock()
+    {
+    	std::cout << "Bye, " << company << "!\n";
+    }
+    
+    void Stock::buy(long num, double price)
+    {
+    	if (num < 0)
+    	{
+    		std::cout << "Number of shares purchased can't be negative. "
+    			<< "Transaction is aborted.\n";
+    	}
+    	else
+    	{
+    		shares += num;
+    		share_val = price;
+    		set_tot();
+    	}
+    }
+    
+    void Stock::sell(long num, double price)
+    {
+    	using std::cout;
+    	if (num < 0)
+    	{
+    		cout << "Number of shares sold can't be negative. "
+    			<< "Transaction is aborted.\n";
+    	}
+    	else if (num > shares)
+    	{
+    		cout << "You can't sell more than you have! "
+    			<< "Transaction is aborted.\n";
+    	}
+    	else
+    	{
+    		shares -= num;
+    		share_val = price;
+    		set_tot();
+    	}
+    }
+    
+    void Stock::update(double price)
+    {
+    	share_val = price;
+    	set_tot();
+    }
+    
+    void Stock::show()
+    {
+    	using std::cout;
+    	using std::ios_base;
+    	// set format to #.###
+    	ios_base::fmtflags orig =
+    		cout.setf(ios_base::fixed, ios_base::floatfield);
+    	std::streamsize prec = cout.precision(3);
+    
+    	cout << "Company: " << company
+    		<< " Shares: " << shares << "\n";
+    	cout << " Share Price: $" << share_val;
+    	// set format to #.##
+    	cout.precision(2);
+    	cout << " Total Worth: $" << total_val << "\n";
+    
+    	// restore original format
+    	cout.setf(orig, ios_base::floatfield);
+    	cout.precision(prec);
+    }
+    ```
+
+* 3、客户文件。使用 Stock 类
+
+  * ```c++
+    // ch10_06_usestock2.cpp -- using the Stock class
+    // compile with stock10.cpp
+    #include <iostream>
+    #include "ch10_04_stock10.h"
+    
+    int main()
+    {
+    	{
+    		using std::cout;
+    		cout << "Using constructors to create new objects\n";
+    		Stock stock1("NanoSmart", 12, 20.0);
+    		stock1.show();
+    		Stock stock2 = Stock("Beffo Objects", 2, 2.0);
+    		stock2.show();
+    
+    		cout << "Assigning stock1 to stock2:\n";
+    		stock2 = stock1;
+    		cout << "Listing stock1 and stock2:\n";
+    		stock1.show();
+    		stock2.show();
+    
+    		cout << "Using a constructor to reset an object\n";
+    		stock1 = Stock("Nifty Foods", 10, 50.0);
+    		cout << "Revised stock1:\n";
+    		stock1.show();
+    		cout << "Done\n";
+    	}
+    	
+    	return 0;
+    }
+    ```
+
+  * main()的开头和末尾多出来的大括号：
+
+    * 诸如 stock1 和 stock2 等自动变量将在程序退出其定义所属代码块时消失；
+    * 如果没有这些大括号，代码块将为整个main()，因此仅当main()执行完毕后，才会调用析构函数。
+
+  * 创建的对象 stock1 和 stock2 用了两种语法并将其数据成员初始化为指定的值，这两种语法等价。详情见《10.3.2 使用构造函数》
+
+    * stock2 创建的时候你可能会疑惑创建的临时对象如何复制到 stock2 并丢弃的问题，见P360
+
+    * 构造函数不仅仅可用于初始化新对象，还可以用于赋值“
+
+      * ```c++
+        stock1 = Stock("Nifty Foods", 10, 50.0);
+        ```
+
+      * 通过让构造程序创建一个新的、临时的对象，然后将其内容赋值给 stock1 来实现的。随后程序调用析构函数，以删除该临时对象。有些编译器可能要过一段时间才删除临时对象。
+
+      * 上述代码与下面代码的根本性差别：
+
+        * ```c++
+          Stock stock2 = Stock("Beffo Objects", 2, 2.0);
+          // 第一条语句是初始化，它创建有指定值的对象，可能会创建临时对象(也可能不会);
+          stock1 = Stock("Nifty Foods", 10, 50.0);
+          // 第二条语句是赋值。
+          ```
+
+        * ❗提示：如果既可以通过初始化，也可以通过赋值来设置对象的值，则**应采用初始化方式**。通常这种方式的效率更高。
+
+  * 在默认情况下，可以将一个对象赋给**同类型**的另一个对象，C++将源对象的每个数据成员的内容复制到目标对象中相应的数据成员中。
+
+* 4、结果：
+
+  * ```c++
+    Using constructors to create new objects
+    Constructor using NanoSmart called
+    Company: NanoSmart Shares: 12
+     Share Price: $20.000 Total Worth: $240.00
+    Constructor using Beffo Objects called
+    Company: Beffo Objects Shares: 2
+     Share Price: $2.000 Total Worth: $4.00
+    Assigning stock1 to stock2:
+    Listing stock1 and stock2:
+    Company: NanoSmart Shares: 12
+     Share Price: $20.000 Total Worth: $240.00
+    Company: NanoSmart Shares: 12
+     Share Price: $20.000 Total Worth: $240.00
+    Using a constructor to reset an object
+    Constructor using Nifty Foods called
+    Bye, Nifty Foods!
+    Revised stock1:
+    Company: Nifty Foods Shares: 10
+     Share Price: $50.000 Total Worth: $500.00
+    Done
+    Bye, NanoSmart!
+    Bye, Nifty Foods!
+    ```
+
+  * 函数 main()结束时，其局部变量 (stock1和 stock2)将消失。由于这种自动变量被放在栈中，因此最后创建的对象将最先被删除，最先创建的对象将最后被删除。
+
+* 5、C++11 列表初始化
+
+  * C++11 中可以将列表初始化语法用于类，只需要踢狗与某个构造函数的参数列表匹配的内容，并用大括号将他们括起：
+
+    * ```c++
+      Stock hot_tip = {"Derivatives Plus Plus", 100, 45.0};
+      Stock jock {"Sport Age Storage, Inc"};
+      //------------------begin------------------//
+      // 前两个声明中，用大括号括起的列表与下面的构造函数匹配：
+      Stock::Stock(const std::string & co, long n = 0, dobule pr = 0.0);
+      // 因此，将使用该构造函数进行创建，jocl创建时将后两个参数默认值为0和0.0
+      //-------------------end-------------------//
+      
+      Stock temp {};// 该声明与默认构造函数匹配
+      ```
+
+  * C++11 还提供了 std::initialize_list 的类，可将其用作函数参数或方法参数的类型。
+
+    * 表示任意长度的列表，只要所有列表项的类型都相同或可转换为相同的类型。
+
+* 6、const 成员函数
+
