--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -878,3 +878,26 @@
 
 * 6、const 成员函数
 
+* 以下代码方式不行：
+
+  * ```c++
+    const Stock land = Stock("Kludgehorn Properties");
+    land.show();
+    ```
+
+  * C++会拒绝执行第二行，因为show() 的代码无法确保调用对象不被修改。
+
+* 保证函数不会修改调用对象的信誉发：
+
+  * ```c++
+    //函数声明：
+    void show() const;
+    //函数定义开头：
+    void Stock::show() const
+    ```
+
+  * 以这种方式声明和定义的类函数被称为const成员函数。
+
+
+
+#### 10.3.6 构造函数和析构函数小结
