--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -901,3 +901,20 @@
 
 
 #### 10.3.6 构造函数和析构函数小结
+
+* 构造函数是一种特殊的类成员函数，**在创建类对象时被调用**。
+  * **构造函数的名称和类名相同**，但通过函数重载，可以创建多个同名的构造函数，条件是每个函数的特征标(参数列表)都不同。
+  * 另外，**构造函数没有声明类型**。通常，构造函数用于初始化类对象的成员，初始化应与构造函数的参数列表匹配。
+* 默认构造函数没有参数：
+  * 因此如果创建对象时没有进行显式地初始化，则将调用默认构造函数。
+  * 如果程序中没有提供任何构造函数，则编译器会为程序定义一个默认构造函数；否则，必须自己提供默认构造函数。
+  * 默认构造函数可以没有任何参数；如果有，则必须给所有参数都提供默认值。
+  * 对于未被初始化的对象，程序将使用默认构造函数来创建。
+* 析构函数:
+  * 就像对象被创建时程序将调用构造函数一样，当对象被删除时，程序将调用析构函数。
+  * 每个类都只能有一个析构函数。析构函数没有返回类型(连 void 都没有)，也没有参数，其名称为类名称前加上~。
+  * 如果构造函数使用了 new，则必须提供使用 delete 的析构函数。
+
+
+
+### 10.4 this 指针
