--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -918,4 +918,54 @@
 
 
 ### 10.4 this 指针
-20231203
+
+（1）定义一个成员函数，能够查看多个类对象，并返回特定对象的引用时候存在的问题：
+
+* 用于两个对象比较的方法原型如下：
+
+  * ```c++
+    const Stock& topval(const Stock & s)const
+    ```
+
+  * 该函数隐式地访问一个对象，而显式地访问另一个对象，并返回其中一个对象的引用。
+
+  * 括号中的const表明：该函数不会修改被显式地访问的对象；
+
+  * 括号后的const表明：该函数不会修改被隐式地访问的对象。
+
+  * 由于该函数返回了两个const对象之一的引用，因此返回类型也应为const引用。
+
+  * 假设要对Stock对象 stock1 和 stock2 进行比较，并将其中股价总值最高的哪一个赋给top对象，则可以使用下面两条语句之一：
+
+    * ```c++
+      top = stock1.topval(stock2);
+      top = stock2.topval(stock1);
+      ```
+
+    * 第一种格式隐式地访问 stock1，而显式地访问 stock2 ；第二种格式反之。无论哪种，都将对这两个对象进行比较，并返回股价总值较高的哪一个。
+
+    * ![image-20231204100447005](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231204100447005.png)
+
+    * 上述方法混来，可以使用运算符重载完成；
+
+（2）this指针解决办法：
+
+* this指针：指向用来调用成员函数的对象（this被作为隐藏参数传递给方法）。
+
+* 注意：
+
+  * 每个成员函数（包括构造函数和析构函数）都有一个 this 指针。this指针指向调用对象。如果方法需要引用整个调用对象，则可以使用表达式*this。在函数的括号后面使用const限定符将this限定为const，这样将不能使用this来修改对象的值。
+
+  * ![image-20231204101906998](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231204101906998.png)
+
+  * ```c++
+    const Stock & Stock::topval(const Stock & s)const
+    {
+        if (s.total_val > total_val)
+            return s;
+        else
+            return *this;
+    }
+    ```
+
+  * 
