--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -944,7 +944,8 @@
 
     * 第一种格式隐式地访问 stock1，而显式地访问 stock2 ；第二种格式反之。无论哪种，都将对这两个对象进行比较，并返回股价总值较高的哪一个。
 
-    * ![image-20231204100447005](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231204100447005.png)
+    * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/1f151142-8c3f-4165-bf84-ba169fc80874)
+
 
     * 上述方法混来，可以使用运算符重载完成；
 
