--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -957,7 +957,8 @@
 
   * 每个成员函数（包括构造函数和析构函数）都有一个 this 指针。this指针指向调用对象。如果方法需要引用整个调用对象，则可以使用表达式*this。在函数的括号后面使用const限定符将this限定为const，这样将不能使用this来修改对象的值。
 
-  * ![image-20231204101906998](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231204101906998.png)
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/8fb0379b-c441-46cc-aba4-71369801a73b)
+
 
   * ```c++
     const Stock & Stock::topval(const Stock & s)const
