--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -971,3 +971,151 @@
     ```
 
   * 
+（3）程序清单：
+
+* 示例：（头文件）
+
+  * ```c++
+    #pragma once
+    #pragma once
+    // ch10_04_stock10.h -- Stock class declaration with constructors, destructor added
+    
+    #ifndef CH10_O4_STOCK10_H_
+    #define CH10_O4_STOCK10_H_
+    
+    #include <string>
+    
+    class Stock
+    {
+    private:
+    	std::string company;
+    	long shares;
+    	double share_val;
+    	double total_val;
+    	void set_tot() { total_val = shares * share_val; }
+    public:
+    // two constructors
+    	Stock();		// default constructor
+    	Stock(const std::string& co, long n = 0, double pr = 0.0);
+    	~Stock();		// noisy destructor
+    	void buy(long num, double price);
+    	void sell(long num, double price);
+    	void update(double price);
+    	void show();
+    };
+    
+    #endif
+    ```
+
+* 示例：（类方法文件，加入新的topval()方法）
+
+  * ```c++
+    // ch10_08_stock20.cpp -- augmented version
+    #include <iostream>
+    #include "ch10_07_stock20.h"
+    
+    // constructors (verbose versions)
+    Stock::Stock()
+    {
+    	company = "no name";
+    	shares = 0;
+    	share_val = 0.0;
+    	total_val = 0.0;
+    }
+    
+    Stock::Stock(const std::string& co, long n, double pr)
+    {
+    	company = co;
+    
+    	if (n < 0)
+    	{
+    		std::cout << "Number of shares can't be negative; "
+    			<< company << " shares set to 0.\n";
+    		shares = 0;
+    	}
+    	else
+    		shares = n;
+    	share_val = pr;
+    	set_tot();
+    }
+    
+    // class destructor
+    Stock::~Stock()
+    {
+    }
+    
+    void Stock::buy(long num, double price)
+    {
+    	if (num < 0)
+    	{
+    		std::cout << "Number of shares purchased can't be negative. "
+    			<< "Transaction is aborted.\n";
+    	}
+    	else
+    	{
+    		shares += num;
+    		share_val = price;
+    		set_tot();
+    	}
+    }
+    
+    void Stock::sell(long num, double price)
+    {
+    	using std::cout;
+    	if (num < 0)
+    	{
+    		cout << "Number of shares sold can't be negative. "
+    			<< "Transaction is aborted.\n";
+    	}
+    	else if (num > shares)
+    	{
+    		cout << "You can't sell more than you have! "
+    			<< "Transaction is aborted.\n";
+    	}
+    	else
+    	{
+    		shares -= num;
+    		share_val = price;
+    		set_tot();
+    	}
+    }
+    
+    void Stock::update(double price)
+    {
+    	share_val = price;
+    	set_tot();
+    }
+    
+    void Stock::show() const
+    {
+    	using std::cout;
+    	using std::ios_base;
+    	// set format to #.###
+    	ios_base::fmtflags orig =
+    		cout.setf(ios_base::fixed, ios_base::floatfield);
+    	std::streamsize prec = cout.precision(3);
+    
+    	cout << "Company: " << company
+    		<< " Shares: " << shares << "\n";
+    	cout << " Share Price: $" << share_val;
+    	// set format to #.##
+    	cout.precision(2);
+    	cout << " Total Worth: $" << total_val << "\n";
+    
+    	// restore original format
+    	cout.setf(orig, ios_base::floatfield);
+    	cout.precision(prec);
+    }
+    
+    const Stock& Stock::topval(const Stock& s) const
+    {
+    	if (s.total_val > total_val)
+    		return s;
+    	else
+    		return *this;
+    }
+    ```
+
+
+
+### 10.5 对象数组
