--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -1118,3 +1118,81 @@
 
 
 ### 10.5 对象数组
+
+（1）声明对象数组的方法与声明标准类型数组相同：
+
+* ```c++
+  Stock mystuff[4];
+  ```
+
+* [当程序创建未被显式初始化的类对象时，总是调用默认构造函数]
+
+* 上述声明要求：这个类要么没有显式地定义任何构造函数，要么定义了一个显式默认构造函数（和这个例子一样）。
+
+  * 每个元素（mystuff[0]、mystuff[1]）都是Stock对象，可以使用Stock方法。
+  * 可以使用构造函数来初始化数组元素；
+
+（2）初始化对象数组的方案：
+
+* 首先使用默认构造函数创建数组元素；
+* 然后花括号中的构造函数将创建临时对象；
+* 进而将临时对象的内容复制到相应的元素中。
+
+（3）程序清单：
+
+* 示例：
+
+  * ```c++
+    // ch10_09_usestock2.cpp -- using the Stock class
+    // compile with stock20.cpp
+    #include <iostream>
+    #include "ch10_07_stock20.h"
+    
+    const int STKS = 4;
+    int main()
+    {
+    	Stock stocks[STKS] =
+    	{
+    		Stock("NanoSmart", 12, 20.0),
+    		Stock("Beffo Objects", 200, 2.0),
+    		Stock("Monolithic Obelisks", 130, 3.25),
+    		Stock("Fleep Enterprises", 60, 6.5)
+    	};
+    	
+    	std::cout << "Stock holdings:\n";
+    	int st;
+    	for (st = 0; st < STKS; st++)
+    		stocks[st].show();
+    // set pointer to first element
+    	const Stock* top = &stocks[0];
+    	for (st = 1; st < STKS; st++)
+    		top = &top->topval(stocks[st]);
+    // now top points to the most valuable holding
+    	std::cout << "\nMost valuable holding:\n";
+    	top->show();
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    Stock holdings:
+    Company: NanoSmart Shares: 12
+     Share Price: $20.000 Total Worth: $240.00
+    Company: Beffo Objects Shares: 200
+     Share Price: $2.000 Total Worth: $400.00
+    Company: Monolithic Obelisks Shares: 130
+     Share Price: $3.250 Total Worth: $422.50
+    Company: Fleep Enterprises Shares: 60
+     Share Price: $6.500 Total Worth: $390.00
+    
+    Most valuable holding:
+    Company: Monolithic Obelisks Shares: 130
+     Share Price: $3.250 Total Worth: $422.50
+    ```
+
+
+
+### 10.6 类作用域
