--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -1196,3 +1196,34 @@
 
 
 ### 10.6 类作用域
+
+（1）在类声明或成员函数定义中，可以使用未修饰的成员名称（未限定的名称）。构造函数名称在被调用时，才能被识别，因为它的名称与类名相同。在其他情况下，使用类成员名时，必须根据上下文使用直接成员运算符（.）、间接成员运算符（->）或作用域解析运算符（::）
+
+* 示例：
+
+  * ```c++
+    class Ik
+    {
+        private:
+            int fuss;
+        public:
+        	Ik(int f = 9) {fuss  = f;}
+        	void ViewIk() const;
+    };
+    
+    void Ik::ViewIk() const
+    {
+        cout << fuss << endl;
+    }
+    ...
+    int main()
+    {
+        Ik * pik = new Ik;
+        Ik ee = Ik(8);
+        ee.ViewIk();
+        pik->ViewIk();
+    ...
+    }
+    ```
+
+#### 10.6.1 作用域为类的常量
