--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -1227,3 +1227,51 @@
     ```
 
 #### 10.6.1 作用域为类的常量
+
+* 使符号常量的作用域为类很有用：
+
+  * 类声明可能使用字面值30来指定数组的长度。
+
+    * 错误：
+
+      * ```c++
+        class Bakery
+        {
+        private:
+            const int Months = 12;
+            double costs[Months];
+        }
+        ```
+
+      * 由于声明类只是描述了对象的形式，并没有创建对象。因此，在创建对象前，将没有用于储存值的空间。
+
+    * 解决办法：
+
+      * 1、在类中声明一个枚举。（在类中声明的枚举的作用域为整个类，因此可以用枚举为整型常量提供作用域为整个类的符号名称）
+
+        * ```c++
+          class Bakery
+          {
+          private:
+              enum {Months = 12};
+              double costs[Months];
+          }
+          ```
+
+        * 注意：这种方式声明枚举并不会创建类数据成员：即所有对象中都不包含枚举。
+
+      * 2、使用关键字 static：
+
+        * ```C++
+          class Bakery
+          {
+          private:
+              static const int Months = 12;
+              double costs[Months];
+          }
+          ```
+
+        * 这将创建一个名为 Months 的常量，该常量将与其他静态变量存储在一起，而不是存储在对象中。
+
+#### 10.6.2 
+
