--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -1273,5 +1273,36 @@
 
         * 这将创建一个名为 Months 的常量，该常量将与其他静态变量存储在一起，而不是存储在对象中。
 
-#### 10.6.2 
+#### 10.6.2 作用域内枚举（C++11）
 
+* 传统枚举存在问题之一：两个枚举定义中的枚举量可能发生冲突
+
+  * 解决办法：提供一种新枚举，其枚举量的作用域为类：
+
+    * ```c++
+      enum class egg {Small, Mediun, Large, Jumbo};
+      enum class t_shirt {Small, Mediun, Large, Xlarge};
+      ```
+
+    * 也可以使用关键字 struct 代替 class
+
+    * 上述办法都需要使用枚举名来限定枚举量：
+
+      * ```c++
+        egg choice = egg::Large;
+        t_shirt Floyd = t_shirt::Large;
+        ```
+
+    * 枚举量的作用域为类后，不同枚举定义中的枚举量就不会发生名称冲突。
+
+* C++11中作用域内枚举的底层类型为 int ，如果要做不同的选择，可以：
+
+  * ```c++
+    enum class : short pizza {Small, Medium, Large, Xlarge};
+    ```
+
+  * :short 将底层类型指定为 short。
+
+
+
+### 10.7 抽象数据类型
