--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -1306,3 +1306,51 @@
 
 
 ### 10.7 抽象数据类型
+
+（1）抽象数据类型（abstract data type, ADT）：以通用的方式描述数据类型，而没有引入语言或实现细节。例如使用栈：
+
+* 栈的特征：
+  * 可创建空栈；
+  * 可将数据项添加到堆顶（压入）；
+  * 可从栈顶删除数据项（弹出）；
+  * 可查看栈是否填满；
+  * 可查看栈是否为空。
+* 可以将其转换为类声明：
+  * 公有成员函数：提供了表示栈操作的接口；
+    * 公有接口应隐藏数据表示，而以通用的术语来表示，如创建栈、压入等。
+  * 私有数据成员：负责存储栈数据。
+    * 私有部分必须表明数据存储的方式，如使用常规数组，动态分配数组或更高级的数据结构
+
+（2）程序清单：
+
+* 示例：
+
+  * 私有部分表明，栈是使用数组实现的；而公有部分隐藏了这一点。因此，可以使用动态数组来代替数组，而不会改变类的接口。这意味着修改栈的实现后，不需要重新编写使用栈的程序，而只需重新编译栈代码，并将其与已有的程序代码链接起来即可。
+
+  * ```c++
+    #pragma once
+    // ch10_10_stack.h -- class definition for the stack ADT
+    #ifndef CH10_10_STACK_H_
+    #define CH10_10_STACK_H_
+    
+    typedef unsigned long Item;
+    
+    class Stack
+    {
+    private:
+    	enum {MAX = 10};
+    	Item items[MAX];
+    	int top;
+    public:
+    	Stack();
+    	bool isempty() const;
+    	bool isfull() const;
+    	bool push(const Item& item);
+    	bool pop(Item& item);
+    };
+    #endif
+    ```
+
+  * 这个类不是根据特定的类型来定义栈，而是根据通用的Item类型来描述。该例typedef用Item代替unsigned long。如果需要其他结构类型的栈，则只需要修改typedef语句即可。
+
+
