--- a/notes/ch10 对象和类.md
+++ b/notes/ch10 对象和类.md
@@ -1323,7 +1323,7 @@
 
 （2）程序清单：
 
-* 示例：
+* 示例1：
 
   * 私有部分表明，栈是使用数组实现的；而公有部分隐藏了这一点。因此，可以使用动态数组来代替数组，而不会改变类的接口。这意味着修改栈的实现后，不需要重新编写使用栈的程序，而只需重新编译栈代码，并将其与已有的程序代码链接起来即可。
 
@@ -1353,4 +1353,140 @@
 
   * 这个类不是根据特定的类型来定义栈，而是根据通用的Item类型来描述。该例typedef用Item代替unsigned long。如果需要其他结构类型的栈，则只需要修改typedef语句即可。
 
+* 示例2：
+
+  * 实现类方法：
+
+  * ```c++
+    // stack.cpp -- Stack member functions
+    #include "ch10_10_stack.h"
+    Stack::Stack()
+    {
+    	top = 0;
+    }
+    
+    bool Stack::isempty() const
+    {
+    	return top == 0;
+    }
+    
+    bool Stack::isfull() const
+    {
+    	return top == MAX;
+    }
+    
+    bool Stack::push(const Item& item)
+    {
+    	if (top < MAX)
+    	{
+    		items[top++] = item;
+    		return true;
+    	}
+    	else
+    		return false;
+    }
+    
+    bool Stack::pop(Item& item)
+    {
+    	if (top > 0)
+    	{
+    		item = items[--top];
+    		return true;
+    	}
+    	else
+    		return false;
+    }
+    ```
+
+* 示例3：
+
+  * 模拟售货员的行为——使用栈的后进先出方式，从购物框的最上面开始处理购物订单。
+
+  * ```c++
+    // ch10_12_stacker.cpp -- testing the Stack class
+    #include <iostream>
+    #include <cctype>
+    #include "ch10_10_stack.h"
+    
+    int main()
+    {
+    	using namespace std;
+    	Stack st;
+    	char ch;
+    	unsigned long po;
+    	cout << "Please enter A to add a purchase order,\n"
+    		<< "P to process a PO, or Q to quit.\n";
+    	while (cin >> ch && toupper(ch) != 'Q')
+    	{
+    		while (cin.get() != '\n')
+    			continue;
+    		if (!isalpha(ch))
+    		{
+    			cout << '\a';
+    			continue;
+    		}
+    		switch (ch)
+    		{
+    		case 'A':
+    		case 'a': cout << "Enter a PO number to add: ";
+    				  cin >> po;
+    				  if (st.isfull())
+    					  cout << "stack already full\n";
+    				  else
+    					  st.push(po);
+    				  break;
+    		case 'P':
+    		case 'p': if (st.isempty())
+    					cout << "stack already empty\n";
+    				  else
+    				  {
+    					  st.pop(po);
+    					  cout << "PO #" << po << " popped\n";
+    				  }
+    				  break;		  	  
+    		}
+    		cout << "Please enter A to add a purchase order,\n"
+    			<< "P to process a PO, or Q to quit.\n";
+    	}
+    	cout << "Bye\n";
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```C++
+    Please enter A to add a purchase order,
+    P to process a PO, or Q to quit.
+    A
+    Enter a PO number to add: 17885
+    Please enter A to add a purchase order,
+    P to process a PO, or Q to quit.
+    P
+    PO #17885 popped
+    Please enter A to add a purchase order,
+    P to process a PO, or Q to quit.
+    A
+    Enter a PO number to add: 17965
+    Please enter A to add a purchase order,
+    P to process a PO, or Q to quit.
+    A
+    Enter a PO number to add: 18002
+    Please enter A to add a purchase order,
+    P to process a PO, or Q to quit.
+    P
+    PO #18002 popped
+    Please enter A to add a purchase order,
+    P to process a PO, or Q to quit.
+    P
+    PO #17965 popped
+    Please enter A to add a purchase order,
+    P to process a PO, or Q to quit.
+    P
+    stack already empty
+    Please enter A to add a purchase order,
+    P to process a PO, or Q to quit.
+    Q
+    Bye
+    ```
 
