--- a/notes/ch11 使用类.md
+++ b/notes/ch11 使用类.md
@@ -3,3 +3,33 @@
 学习本章知识的最好方法：在我们自己开发的C++程序中使用其中的新特性。“轻松地使用这种语言，不要觉得必须使用所有的特性，不要在第一次学习时就试图使用所有的特性。”
 
 ### 11.1 运算符重载
+
+（1）运算符重载是一种形式的C++多态。
+
+（2）C++允许将运算符重载扩展到用户定义的类型：
+
+* 两个数组相加，重载+运算符：
+
+  * ```c++
+    evening = sam + janet;
+    ```
+
+（3）重载运算符方法：
+
+* 需使用被称为运算符函数的特殊函数形式：
+
+  * ```c++
+    operatorop(argument-list)
+    ```
+
+  * 例如：
+
+    * operator +()重载+运算符
+    * operator *()重载 *运算符
+
+  * 不能虚构一个新的符号：@等
+
+
+
+### 11.2 计算时间：一个运算符重载示例
+
