--- a/notes/ch11 使用类.md
+++ b/notes/ch11 使用类.md
@@ -33,3 +33,136 @@
 
 ### 11.2 计算时间：一个运算符重载示例
 
+​	采用一个使用方法来处理加法的Time类：
+
+（1）类声明：
+
+* 示例：
+
+  * ```c++
+    #pragma once
+    // ch11_01_mytime0.h -- Time class before operator overloading
+    #ifndef CH11_O1_MYTIME0_H_
+    #define CH11_O1_MYTIME0_H_
+    
+    class Time
+    {
+    private:
+    	int hours;
+    	int minutes;
+    public:
+    	Time();
+    	Time(int h, int m = 0);
+    	void AddMin(int m);
+    	void AddHr(int h);
+    	void Reset(int h = 0, int m = 0);
+    	Time Sum(const Time& t) const;
+    	void Show() const;
+    };
+    #endif
+    ```
+
+（2）方法定义文件：
+
+* 示例：
+
+  * ```c++
+    // ch11_02_mytime0.cpp -- implementing Time methods
+    #include <iostream>
+    #include "ch11_01_mytime0.h"
+    
+    Time::Time()
+    {
+    	hours = minutes = 0;
+    }
+    
+    Time::Time(int h, int m)
+    {
+    	hours = h;
+    	minutes = m;
+    }
+    
+    void Time::AddMin(int m)
+    {
+    	minutes += m;
+    	hours += minutes / 60;
+    	minutes %= 60;
+    }
+    
+    void Time::AddHr(int h)
+    {
+    	hours += h;
+    }
+    
+    void Time::Reset(int h, int m)
+    {
+    	hours = h;
+    	minutes = m;
+    }
+    
+    Time Time::Sum(const Time& t) const
+    {
+    	Time sum;
+    	sum.minutes = minutes + t.minutes;
+    	sum.hours = hours + t.hours + sum.minutes / 60;
+    	sum.minutes %= 60;
+    	return sum;
+    }
+    
+    void Time::Show() const
+    {
+    	std::cout << hours << " hours, " << minutes << " minutes";
+    }
+    ```
+
+（3）使用类文件：
+
+* 示例：
+
+  * ```c++
+    // ch11_03_usetime0.cpp -- using the first draft of the Time class
+    // compile usetime0.cpp and mytime0.cpp together
+    
+    #include <iostream>
+    #include "ch11_01_mytime0.h"
+    
+    int main()
+    {
+    	using std::cout;
+    	using std::endl;
+    	Time planning;
+    	Time coding(2, 40);
+    	Time fixing(5, 55);
+    	Time total;
+    
+    	cout << "planning time = ";
+    	planning.Show();
+    	cout << endl;
+    
+    	cout << "coding time = ";
+    	coding.Show();
+    	cout << endl;
+    
+    	cout << "fixing time = ";
+    	fixing.Show();
+    	cout << endl;
+    
+    	total = coding.Sum(fixing);
+    	cout << "coding.Sum(fixing) = ";
+    	total.Show();
+    	cout << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    planning time = 0 hours, 0 minutes
+    coding time = 2 hours, 40 minutes
+    fixing time = 5 hours, 55 minutes
+    coding.Sum(fixing) = 8 hours, 35 minutes
+    ```
+
+#### 11.2.1 添加加法运算符
