--- a/notes/ch11 使用类.md
+++ b/notes/ch11 使用类.md
@@ -166,3 +166,167 @@
     ```
 
 #### 11.2.1 添加加法运算符
+
+​	将Time类转换为重载的加法运算符很容易，只要将Sun()的名称改为operator+()即可。
+
+（1）类声明：
+
+* 示例：
+
+  * ```c++
+    #pragma once
+    
+    // ch11_04_mytime1.h -- Time class before operator overloading
+    #ifndef CH11_O4_MYTIME1_H_
+    #define CH11_O4_MYTIME1_H_
+    
+    class Time
+    {
+    private:
+    	int hours;
+    	int minutes;
+    public:
+    	Time();
+    	Time(int h, int m = 0);
+    	void AddMin(int m);
+    	void AddHr(int h);
+    	void Reset(int h = 0, int m = 0);
+    	Time operator+(const Time& t) const;
+    	void Show() const;
+    };
+    #endif
+    ```
+
+（2）类方法文件：
+
+* 示例：
+
+  * ```c++
+    // ch11_05_mytime1.cpp -- implementing Time methods
+    #include <iostream>
+    #include "ch11_04_mytime1.h"
+    
+    Time::Time()
+    {
+    	hours = minutes = 0;
+    }
+    
+    Time::Time(int h, int m)
+    {
+    	hours = h;
+    	minutes = m;
+    }
+    
+    void Time::AddMin(int m)
+    {
+    	minutes += m;
+    	hours += minutes / 60;
+    	minutes %= 60;
+    }
+    
+    void Time::AddHr(int h)
+    {
+    	hours += h;
+    }
+    
+    void Time::Reset(int h, int m)
+    {
+    	hours = h;
+    	minutes = m;
+    }
+    
+    Time Time::operator+(const Time& t) const
+    {
+    	Time sum;
+    	sum.minutes = minutes + t.minutes;
+    	sum.hours = hours + t.hours + sum.minutes / 60;
+    	sum.minutes %= 60;
+    	return sum;
+    }
+    
+    void Time::Show() const
+    {
+    	std::cout << hours << " hours, " << minutes << " minutes";
+    }
+    ```
+
+  * 和Sum()一样，operator+()也是由Time对象调用的，它将第二个Time对象作为参数，并返回一个Time对象。
+
+  * 因此可以像调用Sum()那样来调用operator()方法：
+
+    * ```c++
+      total = morefixing.operator+(total);
+      ```
+
+  * 也可以用运算符：
+
+    * ```c++
+      total = coding + fixing;
+      ```
+
+    * 运算符左侧对象“coding”是调用对象，右侧对象“fixing”是作为参数被传递的对象。
+
+（3）使用类文件：
+
+* 示例：
+
+  * ```c++
+    // ch11_06_usetime1.cpp -- using the first draft of the Time class
+    // compile usetime1.cpp and mytime1.cpp together
+    
+    #include <iostream>
+    #include "ch11_04_mytime1.h"
+    
+    int main()
+    {
+    	using std::cout;
+    	using std::endl;
+    	Time planning;
+    	Time coding(2, 40);
+    	Time fixing(5, 55);
+    	Time total;
+    
+    	cout << "planning time = ";
+    	planning.Show();
+    	cout << endl;
+    
+    	cout << "coding time = ";
+    	coding.Show();
+    	cout << endl;
+    
+    	cout << "fixing time = ";
+    	fixing.Show();
+    	cout << endl;
+    
+    	total = coding + fixing;
+    	cout << "coding + fixing = ";
+    	total.Show();
+    	cout << endl;
+    
+    	Time morefixing(3, 28);
+    	cout << "morefixing time = ";
+    	morefixing.Show();
+    	cout << endl;
+    	total = morefixing.operator+(total);
+    	cout << "morefixing.operator+(total) = ";
+    	total.Show();
+    	cout << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    planning time = 0 hours, 0 minutes
+    coding time = 2 hours, 40 minutes
+    fixing time = 5 hours, 55 minutes
+    coding + fixing = 8 hours, 35 minutes
+    morefixing time = 3 hours, 28 minutes
+    morefixing.operator+(total) = 12 hours, 3 minutes
+    ```
+
+📌运算符可以和多个对象重载在一条语句中。
+
+#### 11.2.2 重载限制
