--- a/notes/ch11 使用类.md
+++ b/notes/ch11 使用类.md
@@ -330,3 +330,21 @@
 📌运算符可以和多个对象重载在一条语句中。
 
 #### 11.2.2 重载限制
+
+* 1、重载后的运算符必须至少有一个操作数是用户定义的类型，这将防止用户为标准类型重载运算符。
+  * 例如不能将减法运算符(-)重载为计算两个double值的和，而不是它们的差。
+* 2、使用运算符时不能违反运算符原来的句法规则
+  * 例如：不能将求模运算符(%)重载成使用一个操作数，同样不能修改运算符的优先级。
+* 3、不能创建新运算符。
+  * 例如：不能定义operator**()函数来表示求幂。
+* 4、不能重载下面的运算符：
+  * <img src="C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231205153859060.png" alt="image-20231205153859060" style="zoom: 67%;" />
+* 5、表11.1中的大多数运算符都可以通过成员或非成员函数进行重载。
+  * ![image-20231205153718071](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231205153718071.png)
+  * ![image-20231205153737814](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231205153737814.png)
+  * 但下面的运算符只能通过成员函数进行重载：
+    * <img src="C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231205153829361.png" alt="image-20231205153829361" style="zoom:67%;" />
+
+#### 11.2.3 其他重载运算符
+
+
