--- a/notes/ch11 使用类.md
+++ b/notes/ch11 使用类.md
@@ -338,7 +338,7 @@
 * 3、不能创建新运算符。
   * 例如：不能定义operator**()函数来表示求幂。
 * 4、不能重载下面的运算符：
-  * <img src="C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231205153859060.png" alt="image-20231205153859060" style="zoom: 67%;" />
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/dcc8694d-4164-4ffe-a5c0-eeca00bcb4fe)
 * 5、表11.1中的大多数运算符都可以通过成员或非成员函数进行重载。
   * ![image-20231205153718071](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231205153718071.png)
   * ![image-20231205153737814](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231205153737814.png)
