--- a/notes/ch11 使用类.md
+++ b/notes/ch11 使用类.md
@@ -341,8 +341,8 @@
   * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/dcc8694d-4164-4ffe-a5c0-eeca00bcb4fe)
 * 5、表11.1中的大多数运算符都可以通过成员或非成员函数进行重载。
   * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/da61fa37-fcb5-4736-b76f-39158fe8ed94)
+  * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/2a924af3-4385-4fe9-b5bc-e489bb37d490)
 
-  * ![image-20231205153737814](C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231205153737814.png)
   * 但下面的运算符只能通过成员函数进行重载：
     * <img src="C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231205153829361.png" alt="image-20231205153829361" style="zoom:67%;" />
 
