--- a/notes/ch11 使用类.md
+++ b/notes/ch11 使用类.md
@@ -342,10 +342,8 @@
 * 5、表11.1中的大多数运算符都可以通过成员或非成员函数进行重载。
   * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/da61fa37-fcb5-4736-b76f-39158fe8ed94)
   * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/2a924af3-4385-4fe9-b5bc-e489bb37d490)
-
   * 但下面的运算符只能通过成员函数进行重载：
-    * <img src="C:\Users\10482\AppData\Roaming\Typora\typora-user-images\image-20231205153829361.png" alt="image-20231205153829361" style="zoom:67%;" />
-
+    * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/b15ddd29-8f63-471a-b2bd-7f5e9e2cf7a6)
 #### 11.2.3 其他重载运算符
 
 
